2007-03-08  Gert Driesen  <drieseng@users.sourceforge.net>

	* FormTest.cs: Added tests for bug #80791 and #80574.

2007-03-08  Rolf Bjarne Kvinge <RKvinge@novell.com> 

	* SendKeysTest.cs: Fixed to not hang keyboard on Windows.

2007-03-08  Jonathan Pobst  <monkey@jpobst.com>

	* FormTest.cs: Add tests for bugs #80574, #80791.

2007-03-05  Chris Toshok  <toshok@ximian.com>

	[merge -r72718:73765 from mwf-handle-branch]

	2007-03-05  Chris Toshok  <toshok@ximian.com>

		* ControlHandleTest.cs: make this build on both 1.1 and 2.0
		profiles.

	2007-02-28  Chris Toshok  <toshok@ximian.com>

		* ControlTest.cs: Flesh out ControlInvokeTest to make sure that
		the Control thread dies (that Application.Run returns, basically).
		This works in isolation, but for some reason it isn't exiting when
		run in concert with other tests (this test is the cause of the
		hangs running the unit tests.)  Marking NotWorking for the time
		being.  This needs to be fixed before merging back to the
		mainline, imo.

2007-03-02  Rolf Bjarne Kvinge <RKvinge@novell.com> 

	* FormTest.cs: Added MaximizedParentedFormTest.

2007-03-02  Carlos Alberto Cortez <calberto.cortez@gmail.com>

	* ListViewCollectionsTest.cs: Added tests for the exceptions thrown
	by ListViewItemCollection when virtual mode is used.

2007-03-01  Gert Driesen  <drieseng@users.sourceforge.net>

	* ListViewCollectionsTest.cs: Added ColumnHeader.Index tests.
	* ColumnHeaderTest.cs: Added more DisplayIndex tests.

2007-02-29  Carlos Alberto Cortez <calberto.cortez@gmail.com>

	* ListViewTest.cs: Add test for VirtualMode and VirtualSize,
	as well as for the exceptions they throw.

2007-02-28  Jonathan Pobst  <monkey@jpobst.com>

	* DefaultLayoutTest.cs: Add test for bug #80917.

2007-02-26  Gert Driesen  <drieseng@users.sourceforge.net>

	* ListViewCollectionsTest.cs: Added and improved tests for removing
	columns and items, and clearing the collections.
	* ListViewTest.cs: Improved ClearTest to also verify whether removed